added give voucher to one customer per city 	modified:   .gitignore 	modified:   Frontend/delivery_frontend/lib/main.dart 	modified:   Frontend/delivery_frontend/lib/screens/customers_page.dart 	modified:   Frontend/delivery_frontend/lib/services/network_service.dart 	modified:   Frontend/delivery_frontend/pubspec.lock

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Backend/SupermarketAPI/SupermarketApp/__pycache__/views.cpython-312.pyc
 Backend/SupermarketAPI/SupermarketApp/migrations/__pycache__/__init__.cpython-312.pyc
 Backend/SupermarketAPI/SupermarketApp/tests/__pycache__/__init__.cpython-312.pyc
 Backend/SupermarketAPI/SupermarketApp/tests/__pycache__/test_views.cpython-312.pyc
+Frontend/delivery_frontend/pubspec.lock
