--- a/Frontend/delivery_frontend/pubspec.yaml
+++ b/Frontend/delivery_frontend/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/bunch-bananas-isolated-on-white-600w-1722111529.png
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
